--- a/Fontes/SisLoja/SisLoja/UI/fRegister.resx
+++ b/Fontes/SisLoja/SisLoja/UI/fRegister.resx
@@ -58,7 +58,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnCustomer.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnCliente.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
         DAAACwwBP0AiyAAABCZJREFUeF7tmsurVVUcgK9paRgFYYGVj8qsYRRaUSo5qEGDoBdWAx04MqmsSY1S
@@ -82,7 +82,7 @@
         K58m2QAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="btnProduct.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnProduto.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
         DAAACwwBP0AiyAAAAa5JREFUeF7tlU1KBDEQRmcvnsSF11BP4d9BXHoLdaMncuFWr+DPUr9iEmhCFRm6
@@ -95,7 +95,7 @@
         R4vMbDhaZGbD0SIzmyRJkiRJkiQmu90f06h8AIOzji8AAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnInn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnEntrada.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
         DAAACwwBP0AiyAAAA/FJREFUeF7t2nmoTnkcx/HL2LI1ZZlBlmIYS9amKFnKPxKyRYp/ZhqlLNFQKBKS
