--- a/Fontes/SisLoja/SisLoja/UI/fCadCliente.resx
+++ b/Fontes/SisLoja/SisLoja/UI/fCadCliente.resx
@@ -58,19 +58,40 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnSalvar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="kbtnSalvar.Values.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAI5JREFUWEft
-        jlsKwCAMBD2C979UeyOrcShYCj6SD1syIG2WbJjgOFuSbDjyi5yco/ZNWJOo3ZQYBaImKxDfOWPh5Dsv
-        UXtqgZjfmkTtjAk8YU328qeRkIURKKgFCvm3SAhEfdh/FRiFmkD0cQENnHOBdQHGaaj/SICxC+su4AIu
-        oBewhvN92DeH846zEyFcbAgQG7KB2lYAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAADcSURBVEhL7ZOxDcIwFERdUVCDxAo0gMQkzIBEwSwMlMAK
+        qSioKdnC3H3/RFbimB8o8ZNOiv+d/6VIXGES3vsddIMa1VqtDs7UO+iZzxW0lEAOhLg8Zq9WB2fB8ic9
+        t9yhfAkCfJuYKQXkAa0kmALmrwWkkmAKmJaCOefQQs99GgmmoBkyHReIy8Z0hPpMKviGPyt4QZzlxEyM
+        uaCGZmqNwgx05QXFXHDW8UeYDVcEc4H8SBaYDVeEUjCE2XBFyBbEX8MTYqFFzLbUum4IzC3EktQSi/hp
+        b3RdwYJzbw+uhIzD0xtkAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btnVoltar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="kbtnVoltar.Values.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAGFJREFUWEft
-        1tEJgDAQg+EbyREcpZvphrqBvSAHDlBSxf+DQLmX5LEBDLRk2v30U/mRuTKrDk7P8l0HJ8opt6L8f+Wi
-        AWdGAzYdZmBEYURhRGFEed0I+6e0aMS0bzm+KqID5XI8thLHhFwAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAB3SURBVEhL7ZM7CsAgEAVNkdPmY4ocJDlvIDobVpC0ulY7
+        8BofzAPR4DhjSSlN5CCrHvVD5TcRHjJr1Q6yWv6STat2kP3lu1btILOTCwjPT20hF5CaD8gVXbIAMhK1
+        6gfSYSM2z7SAtB7p+9EKSGUkkkWPHMecEDIxuL/jhhl79QAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAh5JREFUaEPtl8suBEEUhscCCU8gsTLdiNvGir1kRPWwEV7A7JgqHsATuEwIO9Yu
+        S2xcXgKxZycS98SC8J9xFiLHdA1jqkl9yZ/pzHT99ffMqVM1KY/H4/lftA2b7iDShVCZE7w+kOgaWmwZ
+        muri25JHkJmsD5VegV7CyLyKUuY5iMxyx+hsHQ9LBhz+SAwtKFDmMFEPgVCrn0PGKVB6iYe7hWq+ZNl8
+        JZRTOtKdbOOO4oKVAtppnm3cgW//VAhmKX3MNu7AgryXw8UL6+CObdxBIaRwlrplG3f8+RKiHVYOFy80
+        gDm2cQcdD6glSgFLinbl7EwH27iFjgdiyBKi9svD3UPHAgQ6kIJKQufa783lanl4Mig+BI4HJcupeJjT
+        hcSF/wgdDxB2njoM7RHv+wSusWATU/Mej8eTKGqoPYZDZgIHuwXsyntomWdopZfQE+uS3qPP6B66l1tq
+        zbtFlekZmGlsVdNj6O/b6PNXCChvXDHisVvk1aRyDWz/e2Ciduy265j08WOQCgmeeo3m4OkqR5CZbMZP
+        vwmV/+e9XNEcymzQnDz9z2hV+ZGflMm3pfRNmDXjHON7oFyMaF5FBVmd5zjlkR6e7q9KycQJGdIq38ex
+        7EHb2xUNHQglvMOx7CnWoGDmRMpccyx7RCOH4lj2SCYuxbHskUxcimPZg0EXn02cSelzjmUPNrBBDHb/
+        EAifjkyGY3k8Hk+iSKXeANXawPXGIg5kAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="kryptonCustomPaletteBase1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
